Sat Jun  5 16:39:13 2010  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): show type name for RTypedData.

Sat Jun  5 10:03:31 2010  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): detect and show RTypedData.

Fri May 28 20:35:21 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (blocking_region_begin): avoid RUBY_VM_CHECK_INTS()
	call during GVL state transition. [Bug#3354] [ruby-dev:41435]

Fri Jun 11 00:42:45 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_localtime_r2): fix localtime overflow check.

Thu Jun 10 23:05:44 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_localtime_r2): refine localtime overflow check for
	  FreeBSD 6.4.

Thu Jun 10 21:35:27 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): always outerpolate from past.
	  [ruby-core:30672] reported by Benoit Daloze.
	  backport r28238 from trunk.

	* time.c (calc_tm_yday): extracted from timegmw_noleapsecond.
	  backport r28236 from trunk.

Thu Jun 10 10:06:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_putc): documentation updated to mention putc would
	  not work well with multi-byte characters.  [ruby-core:30697]

	* io.c (rb_f_putc): ditto.

Tue Jun  8 22:14:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_systmpdir): moved from ext/tmpdir.

	* ext/etc/etc.c (etc_sysconfdir): added.

	* lib/rubygems/config_file.rb, lib/tmpdir.rb: use etc.

Tue Jun  8 06:27:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gem_prelude.rb: load full rubygems at LoadError for activation
	  check.  [ruby-core:29486]

Tue Jun  8 06:04:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (parse_mode_enc): set set_by_bom bit.  [ruby-core:30641]

Sun Jun  6 23:35:12 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* gc.c (heaps_slot, assign_heap_slot, gc_sweep): skip sweep if
	  heap_slot's status is pre-free phase.  [ruby-dev:41543]

Sun Jun  6 22:37:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
